--- a/notebooks/runs/clustering_from_rules_run.ipynb
+++ b/notebooks/runs/clustering_from_rules_run.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "be76f68f",
    "metadata": {
     "execution": {
@@ -198,7 +198,7 @@
     "if src_path not in sys.path:\n",
     "    sys.path.append(src_path)\n",
     "\n",
-    "from apriori_library import RuleBasedCustomerClusterer\n"
+    "from cluster_library import RuleBasedCustomerClusterer\n"
    ]
   },
   {
